@@ -2,13 +2,14 @@
 Hash: SHA256
 
 DIST settingslogic-2.0.6.gem 10752 RMD160 a6a0dc87f059e2818f3c76d905d048d95d242f1b SHA1 b2f5e6b9f273eb51f7ffeb563d91986ece0d5b6a SHA256 8eea8b78b3a21b776989063362cf666044fedb282e659af04c1cb36ce3c6fce4
+EBUILD settingslogic-2.0.6-r1.ebuild 659 RMD160 372e920599936e75b759c998494044d028635651 SHA1 ed16a0a077c4e121a661404866fc6f93aca5ab69 SHA256 c2fe668bba9c6b8fd9b459ba7d777d9aad23c0d058e82b0392330ceb8a32a690
 EBUILD settingslogic-2.0.6.ebuild 462 RMD160 9c3e4064e048456a26ce55170ba38e46430f9a3b SHA1 de172ae89cacd48a5f6c2cbc74fcaacdcbfb99ba SHA256 1f2634280232d6f49762b7c6e954119dd9ca108c88e3e2e2e8ad70bbef34f63c
-MISC ChangeLog 512 RMD160 e7e81f7c2d74bc538dd84842bf2f7e89416bf1de SHA1 fd762f63efdd5f417da650c6334e7055d2367dd2 SHA256 5ff577fab43dbe324f5df0add50b8e3494555d9d307a95ea5988bacfce14a73f
+MISC ChangeLog 663 RMD160 3ce45cde219c3d2534f35da0de60512ff70c1b47 SHA1 018a395a578c277a1b8f3526d60de7e96b5ab6ff SHA256 8c8b8647db2db5f699b409b25cf907420d1c94e0342c8ccfe7ab3c60dcac4d12
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iF4EAREIAAYFAkxazgQACgkQZihJkut28SuGXAD/QlzNKvaux/VwY3ezWwUBzRDz
-u6j65p3rVZCkzQ0knw4BAKXawZEowroL+GQjWLH+5DFcJrL9yzd7uWL5HUBp3KHV
-=S3jk
+iF4EAREIAAYFAkxb47oACgkQZihJkut28Su+kAD+OF4trJCOLu/bI8zdheUS8PdK
+z9JLjOGpJnHNU8Zh04UBAJt4gtRKDyt5n4/HG9bBEpBwcfL1AfZM7rtaBgXdyz1E
+=NjFO
 -----END PGP SIGNATURE-----
