@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*settingslogic-2.0.6-r1 (06 Aug 2010)
+
+  06 Aug 2010; Hans de Graaff <graaff@gentoo.org>
+  +settingslogic-2.0.6-r1.ebuild:
+  Convert to ruby-fakegem.
+
   05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
   -settingslogic-2.0.3.ebuild:
   Remove old version.
